--- a/html/changelog.html
+++ b/html/changelog.html
@@ -38,6 +38,12 @@
 
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">01 November 2019</h2>
+			<h3 class="author">Rampo updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">[Eclipse]: Возврат обычной карты.</li>
+			</ul>
+			
 			<h2 class="date">31 October 2019</h2>
 			<h3 class="author">Rampo updated:</h3>
 			<ul class="changes bgimages16">
@@ -48,7 +54,16 @@
 			<ul class="changes bgimages16">
 				<li class="maptweak">[Exodus]: Хеллоуиниское преобразование карты с соответствующим декором и тыквами.</li>
 			</ul>
-			
+			<h3 class="author">kreeperHLC updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Чужие больше не могут поднимать оружие а также получили зрение в темноте.</li>
+				<li class="bugfix">Дополнительные мелкофиксы Чужих.</li>
+			</ul>
+			<h3 class="author">MrPersival updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Громкость шаттла была снижена в три раза.</li>
+			</ul>
+
 			<h2 class="date">30 October 2019</h2>
 			<h3 class="author">TatarTheBuilder updated:</h3>
 			<ul class="changes bgimages16">
