--- a/html/changelog.html
+++ b/html/changelog.html
@@ -38,7 +38,79 @@
 
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">10 November 2019</h2>
+			<h3 class="author">Igorsaux updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Фикс боди сканнера.</li>
+				<li class="tweak">Добавлен опциональный тултип.</li>
+				<li class="tweak">Добавлена проверка целостности кэша.</li>
+			</ul>
+
+			<h2 class="date">09 November 2019</h2>
+			<h3 class="author">Igorsaux updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Обновление tgui2 с новыми фичами.</li>
+				<li class="tweak">Добавлен новый интерфейс для боди сканнера.</li>
+				<li class="tweak">Добавлена кнопка паузы музыки в жукбоксе.</li>
+				<li class="soundadd">Фикс звука двойной двери.</li>
+				<li class="soundadd">Фикс звука пулла.</li>
+			</ul>
+
+			<h2 class="date">08 November 2019</h2>
+			<h3 class="author">Igorsaux updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="soundadd">Возвращён старый звук стеклянных аирлоков.</li>
+				<li class="soundadd">Фикс звука анонсов.</li>
+				<li class="soundadd">Добавлены отдельные эмбиенты технических тоннелей, научного и медицинского отсека.</li>
+				<li class="sounddel">Удалён лишний эмбиент.</li>
+			</ul>
+
+			<h2 class="date">07 November 2019</h2>
+			<h3 class="author">TatarTheBuilder updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">[Exodus]: Возвращена старая карта.</li>
+				<li class="tweak">Новый спрайт для сканера антител.</li>
+			</ul>
+
+			<h2 class="date">05 November 2019</h2>
+			<h3 class="author">Igorsaux updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="soundadd">Фикс громкости звука дыхания через баллоны.</li>
+				<li class="tweak">Возвращены старые звуки ударов.</li>
+			</ul>
+
+			<h2 class="date">04 November 2019</h2>
+			<h3 class="author">Igorsaux updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Фикс спрайта искр.</li>
+				<li class="bugfix">Фикс звука таскания мешков.</li>
+				<li class="bugfix">Фикс спама эмоутами.</li>
+				<li class="soundadd">Фикс звука дыхания через баллоны.</li>
+			</ul>
+
+			<h2 class="date">03 November 2019</h2>
+			<h3 class="author">Igorsaux updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="soundadd">Добавлено множество новых эмбиентов и звуков для предметов, консолей, дверей и прочего.</li>
+			</ul>
+
+			<h2 class="date">02 November 2019</h2>
+			<h3 class="author">Rampo updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">[Eclipse]: Фикс арсенала.</li>
+			</ul>
+
+			<h2 class="date">01 November 2019</h2>
+			<h3 class="author">Rampo updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">[Eclipse]: Возвращена старая карта.</li>
+			</ul>
+
 			<h2 class="date">31 October 2019</h2>
+			<h3 class="author">MrPersival updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="soundadd">Громкость взлёта шаттла понижена в три раза.</li>
+			</ul>
 			<h3 class="author">Rampo updated:</h3>
 			<ul class="changes bgimages16">
 				<li class="maptweak">[Eclipse]: Крупный редизайн станции под хеллоуин, начиная от банального декора и заканчивая завозом в оружейную экипировки культа.</li>
@@ -48,7 +120,13 @@
 			<ul class="changes bgimages16">
 				<li class="maptweak">[Exodus]: Хеллоуиниское преобразование карты с соответствующим декором и тыквами.</li>
 			</ul>
-			
+			<h3 class="author">kreeperHLC updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Фикс поднятия Чужими оружия.</li>
+				<li class="tweak">Изменены и пофикшены спрайты чужих.</li>
+				<li class="tweak">Чужим добавлено зрение в темноте.</li>
+			</ul>
+
 			<h2 class="date">30 October 2019</h2>
 			<h3 class="author">TatarTheBuilder updated:</h3>
 			<ul class="changes bgimages16">
