Возможность изменять размер иконок

--- a/code/modules/goonchat/browserassets/html/browserOutput.html
+++ b/code/modules/goonchat/browserassets/html/browserOutput.html
@@ -39,6 +39,8 @@
 		<div class="sub" id="subOptions">
 			<a href="#" class="subCell decreaseFont topCell" id="decreaseFont"><span>Decrease font size</span> <i class="fas fa-font"></i></a>
 			<a href="#" class="subCell increaseFont" id="increaseFont"><span>Increase font size</span> <i class="fas fa-font"></i></a>
+			<a href="#" class="subCell decreaseIcon" id="decreaseIcon"><span>Decrease icon size</span> <i class="fas fa-image"></i></a>
+			<a href="#" class="subCell increaseIcon" id="increaseIcon"><span>Increase icon size</span> <i class="fas fa-image"></i></a>
 			<a href="#" class="subCell decreaseLineHeight" id="decreaseLineHeight"><span>Decrease line height</span> <i class="fas fa-text-height"></i></a>
 			<a href="#" class="subCell increaseLineHeight" id="increaseLineHeight"><span>Increase line height</span> <i class="fas fa-text-height"></i></a>
 			<a href="#" class="subCell togglePing" id="togglePing"><span>Toggle ping display</span> <i class="fas fa-circle"></i></a>
