Возможность поставить кастомый шрифт для чата

--- a/code/modules/goonchat/browserassets/html/browserOutput.html
+++ b/code/modules/goonchat/browserassets/html/browserOutput.html
@@ -30,8 +30,8 @@
 		<div id="darkmodething">
 			<a href="#" class="subCell toggle" id="darkmodetoggle" title="Darkmode"><i class="fas fa-adjust"></i></a>
 		</div>
-		<div id="audio">
-			<a href="#" class="subCell toggle" id="toggleAudio" title="Audio"><i class="fas fa-volume-up"></i></a>
+		<div id="font">
+			<a href="#" class="subCell toggle" id="toggleFont" title="Font"><i class="fas fa-font"></i></a>
 		</div>
 		<div id="options">
 			<a href="#" class="subCell toggle" id="toggleOptions" title="Options"><i class="fas fa-cog"></i></a>
@@ -49,11 +49,12 @@
 			<a href="#" class="subCell toggleCombine" id="toggleCombine"><span>Toggle line combining</span> <i class="fas fa-filter"></i></a>
 			<a href="#" class="subCell clearMessages" id="clearMessages"><span>Clear all messages</span> <i class="fas fa-eraser"></i></a>
 		</div>
-		<div class="sub" id="subAudio">
-			<span class="subCell topCell" id="musicVolumeSpan"><input type="range" class="hidden" id="musicVolume"><span id="musicVolumeText">Admin music volume</span><i class="fas fa-music"></i></span>
+		<div class="sub" id="subFont">
+			<span class="subCell topCell" id="fontInputSpan">
+				<input id="fontInput" type="text" class="hidden" placeholder="Font name (Arial, 'PT Sans' for example)"><i class="fas fa-font"></i>
+			</span>
 		</div>
 	</div>
-	<audio class="hidden" id="adminMusic" autoplay></audio>
 	<script type="text/javascript" src="browserOutput.js"></script>
 </body>
 </html>
