--- a/html/changelog.html
+++ b/html/changelog.html
@@ -38,12 +38,83 @@
 
 		-->
 		<div class="commit sansserif">
+		<div class="commit sansserif">
+			<h2 class="date">15 November 2019</h2>
+			<h3 class="author">Igorsaux updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Добавлен блоб.</li>
+				<li class="tweak">Добавлено гниение органов при смерти мозга.</li>
+				<li class="tweak">Небольшой ребаланс блоба.</li>
+				<li class="tweak">Удалено давнее подскальзывание на волосах.</li>
+				<li class="tweak">Лишний раз обновлён tgui2.</li>
+				<li class="tweak">Небольшое улучшение интерфейса.</li>
+				<li class="bugfix">Фикс разброса упавших на пол гильз.</li>
+			</ul>
+			<h3 class="author">TatarTheBuilder updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Добавлен РПГ.</li>
+			</ul>
+
+			<h2 class="date">14 November 2019</h2>
+			<h3 class="author">Ifromspace updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Добавлен рестрикт по возрасту для глав.</li>
+			</ul>
+
+			<h2 class="date">13 November 2019</h2>
+			<h3 class="author">Igorsaux updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Ещё оптимизация гунчата.</li>
+				<li class="tweak">Впилена возможность отключить гунчат.</li>
+				<li class="tweak">Добавлена возможность установки своего шрифта для чата.</li>
+				<li class="tweak">Установлена кнопка донат-панели.</li>
+			</ul>
+
+			<h2 class="date">12 November 2019</h2>
+			<h3 class="author">EditorRUS updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Починена донат-панель.</li>
+			</ul>
+			<h3 class="author">Igorsaux updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Фиксы донат-панели и иконок в ней.</li>
+				<li class="tweak">Добавлена возможность изменить расположение строки чата.</li>
+				<li class="tweak">Добавлена возможность изменить размер иконок в чате.</li>
+				<li class="tweak">Оптимизация гунчата.</li>
+				<li class="bugfix">Фикс цветов каналов и OOC в тёмной теме.</li>
+				<li class="bugfix">Фикс экзамайна пожарных штворок.</li>
+			</ul>
+
+			<h2 class="date">11 November 2019</h2>
+			<h3 class="author">Igorsaux updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Произошел гунчат... опять.</li>
+				<li class="tweak">Добавлен полноэкранный режим и хоткеи для него.</li>
+				<li class="bugfix">Минорный фикс тултипа.</li>
+				<li class="bugfix">Фикс нейролейса.</li>
+				<li class="bugfix">Фикс размера иконок в чате.</li>
+				<li class="soundadd">Фикс звука карманов у одежды.</li>
+			</ul>
+			<h3 class="author">TatarTheBuilder updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">У визардов удалено кольцо невидимости.</li>
+				<li class="tweak">Добавлен кастомный шлем и противогаз.</li>
+			</ul>
+
 			<h2 class="date">10 November 2019</h2>
 			<h3 class="author">Igorsaux updated:</h3>
 			<ul class="changes bgimages16">
+				<li class="soundadd">Небольшие фиксы звуков стрельбы и взрывов.</li>
 				<li class="bugfix">Фикс боди сканнера.</li>
+				<li class="tweak">Минорные улучшения интерфейса боди сканнера.</li>
 				<li class="tweak">Добавлен опциональный тултип.</li>
 				<li class="tweak">Добавлена проверка целостности кэша.</li>
+				<li class="tweak">Убран звук пулла при движении шагом.</li>
+				<li class="tweak">Добавлена загрузка всех ресурсов при подключении.</li>
+			</ul>
+			<h3 class="author">TatarTheBuilder updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Усилен импульсный карабин.</li>
 			</ul>
 
 			<h2 class="date">09 November 2019</h2>
