Третья тема ониксчата - марины

--- a/code/modules/onyxchat/browserassets/html/browserOutput.html
+++ b/code/modules/onyxchat/browserassets/html/browserOutput.html
@@ -27,14 +27,30 @@
 			<i class="fas fa-circle" id="pingDot"></i>
 			<span class="ms" id="pingMs">--ms</span>
 		</div>
-		<div id="darkmodething">
-			<a href="#" class="subCell toggle" id="darkmodetoggle" title="Darkmode"><i class="fas fa-adjust"></i></a>
+		<div id="theme">
+			<a href="#" class="subCell toggle" id="toggleTheme" title="Theme"><i class="fas fa-adjust"></i></a>
 		</div>
 		<div id="font">
 			<a href="#" class="subCell toggle" id="toggleFont" title="Font"><i class="fas fa-font"></i></a>
 		</div>
 		<div id="options">
 			<a href="#" class="subCell toggle" id="toggleOptions" title="Options"><i class="fas fa-cog"></i></a>
+		</div>
+		<div class="sub" id="subTheme">
+			<a href="#" class="subCell topCell" id="setWhiteTheme">
+				<span>Set White Theme</span>
+				<i class="fas fa-adjust"></i>
+			</a>
+
+			<a href="#" class="subCell" id="setDarkTheme">
+				<span>Set Dark Theme</span>
+				<i class="fas fa-adjust"></i>
+			</a>
+
+			<a href="#" class="subCell" id="setDarkMarineTheme">
+				<span>Set Marine Theme</span>
+				<i class="fas fa-adjust"></i>
+			</a>
 		</div>
 		<div class="sub" id="subOptions">
 			<a href="#" class="subCell decreaseFont topCell" id="decreaseFont"><span>Decrease font size</span> <i class="fas fa-font"></i></a>
