--- a/html/changelog.html
+++ b/html/changelog.html
@@ -38,8 +38,95 @@
 
 		-->
 		<div class="commit sansserif">
-		<div class="commit sansserif">
+			<h2 class="date">22 November 2019</h2>
+			<h3 class="author">Ifromspace updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Исправлено подскальзывание.</li>
+				<li class="tweak">Небольшие корректировки иммунитета.</li>
+				<li class="tweak">Надувные стены и двери получили свойство разрущения.</li>
+				<li class="tweak">Удалена возможность щитов обходить диффузоры.</li>
+			</ul>
+			<h3 class="author">Igorsaux updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Добавлены новые спрайты блоба.</li>
+				<li class="tweak">Небольшие корректировки баланса блоба.</li>
+			</ul>
+
+			<h2 class="date">21 November 2019</h2>
+			<h3 class="author">Ifromspace updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Исправлена ошибка при передаче предметов.</li>
+				<li class="bugfix">Пофикшены интегральные платы.</li>
+				<li class="tweak">Добавлен иммунокорректор.</li>
+				<li class="tweak">Изменена цветовая гамма скайбокса.</li>
+			</ul>
+			<h3 class="author">Plin updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Удалены новогодние песни из жукбокса, как и возможность загружать в него новые.</li>
+			</ul>
+			<h3 class="author">kreeperHLC updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Возвращены события раунда.</li>
+			</ul>
+
+			<h2 class="date">20 November 2019</h2>
+			<h3 class="author">Igorsaux updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Исправлено гниение синтетических органов.</li>
+				<li class="bugfix">Пофикшен экзамайн предметов.</li>
+				<li class="bugfix">Исправлены цвета OOC и ПМ.</li>
+				<li class="bugfix">Пофикшен спавн блоба.</li>
+				<li class="tweak">Время гниения биоструктуры изменено до 15 минут.</li>
+				<li class="tweak">Удалена возможность включения старого чата.</li>
+				<li class="tweak">Добавлена третья цветовая схема чата - марины.</li>
+				<li class="tweak">Добавлена возможность ротации скринов в лобби.</li>
+			</ul>
+			<h3 class="author">kreeperHLC updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Фикс размера и портала ручного телепортера.</li>
+			</ul>
+
+			<h2 class="date">19 November 2019</h2>
+			<h3 class="author">kreeperHLC updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Исправлен баг с порталами.</li>
+			</ul>
+
+			<h2 class="date">18 November 2019</h2>
+			<h3 class="author">Terran updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Добавлен кастомный шлем, шапка и противогаз.</li>
+			</ul>
+
+			<h2 class="date">17 November 2019</h2>
+			<h3 class="author">Igorsaux updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Время гниения конечностей продлено до 20 минут.</li>
+				<li class="tweak">Теперь блоб может появиться в качестве ивента.</li>
+				<li class="tweak">Портирована анимация облачка сообщений с маринов.</li>
+			</ul>
+			<h3 class="author">KreeperHLC updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">Добавлена новая карта "Sunset".</li>
+			</ul>
+
+			<h2 class="date">16 November 2019</h2>
+			<h3 class="author">Ifromspace updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Для корги добавлен свой интерфейс.</li>
+			</ul>
+			<h3 class="author">KreeperHLC updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Пофикшены ручные телепортеры, возвращён старый спрайт.</li>
+				<li class="bugfix">Исправлен обжектив на кражу ИИ.</li>
+			</ul>
+
 			<h2 class="date">15 November 2019</h2>
+			<h3 class="author">Ifromspace updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Обезьяны теперь могут носить очки.</li>
+				<li class="tweak">Офицер Бипски стал играбелен.</li>
+			</ul>
 			<h3 class="author">Igorsaux updated:</h3>
 			<ul class="changes bgimages16">
 				<li class="tweak">Добавлен блоб.</li>
@@ -71,16 +158,13 @@
 			</ul>
 
 			<h2 class="date">12 November 2019</h2>
-			<h3 class="author">EditorRUS updated:</h3>
-			<ul class="changes bgimages16">
-				<li class="tweak">Починена донат-панель.</li>
-			</ul>
 			<h3 class="author">Igorsaux updated:</h3>
 			<ul class="changes bgimages16">
 				<li class="tweak">Фиксы донат-панели и иконок в ней.</li>
 				<li class="tweak">Добавлена возможность изменить расположение строки чата.</li>
 				<li class="tweak">Добавлена возможность изменить размер иконок в чате.</li>
 				<li class="tweak">Оптимизация гунчата.</li>
+				<li class="tweak">Починена донат-панель.</li>
 				<li class="bugfix">Фикс цветов каналов и OOC в тёмной теме.</li>
 				<li class="bugfix">Фикс экзамайна пожарных штворок.</li>
 			</ul>
