--- a/html/changelog.html
+++ b/html/changelog.html
@@ -38,13 +38,23 @@
 
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">23 November 2019</h2>
+			<h3 class="author">Igorsaux updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Фикс рецепта платы консоли нейромодов.</li>
+			</ul>
+			<h3 class="author">TatarTheBuilder updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Фикс покупки ракет из аплинка.</li>
+			</ul>
+
 			<h2 class="date">22 November 2019</h2>
 			<h3 class="author">Ifromspace updated:</h3>
 			<ul class="changes bgimages16">
-				<li class="bugfix">Исправлено подскальзывание.</li>
+				<li class="bugfix">Фикс подскальзывания.</li>
 				<li class="tweak">Небольшие корректировки иммунитета.</li>
-				<li class="tweak">Надувные стены и двери получили свойство разрущения.</li>
-				<li class="tweak">Удалена возможность щитов обходить диффузоры.</li>
+				<li class="tweak">Надувные стены и двери теперь могут ломаться.</li>
+				<li class="tweak">Щиты потеряли возможность игнорировать диффузоры.</li>
 			</ul>
 			<h3 class="author">Igorsaux updated:</h3>
 			<ul class="changes bgimages16">
@@ -55,8 +65,8 @@
 			<h2 class="date">21 November 2019</h2>
 			<h3 class="author">Ifromspace updated:</h3>
 			<ul class="changes bgimages16">
-				<li class="bugfix">Исправлена ошибка при передаче предметов.</li>
-				<li class="bugfix">Пофикшены интегральные платы.</li>
+				<li class="bugfix">Фикс ошибки при передаче предметов.</li>
+				<li class="bugfix">Фикс некоторых интегральных плат.</li>
 				<li class="tweak">Добавлен иммунокорректор.</li>
 				<li class="tweak">Изменена цветовая гамма скайбокса.</li>
 			</ul>
@@ -73,8 +83,8 @@
 			<h3 class="author">Igorsaux updated:</h3>
 			<ul class="changes bgimages16">
 				<li class="bugfix">Исправлено гниение синтетических органов.</li>
-				<li class="bugfix">Пофикшен экзамайн предметов.</li>
-				<li class="bugfix">Исправлены цвета OOC и ПМ.</li>
+				<li class="bugfix">Фикс экзамайна предметов.</li>
+				<li class="bugfix">Фикс цветов OOC и ПМ.</li>
 				<li class="bugfix">Пофикшен спавн блоба.</li>
 				<li class="tweak">Время гниения биоструктуры изменено до 15 минут.</li>
 				<li class="tweak">Удалена возможность включения старого чата.</li>
@@ -83,19 +93,13 @@
 			</ul>
 			<h3 class="author">kreeperHLC updated:</h3>
 			<ul class="changes bgimages16">
-				<li class="bugfix">Фикс размера и портала ручного телепортера.</li>
+				<li class="bugfix">Фикс ручного телепортера.</li>
 			</ul>
 
 			<h2 class="date">19 November 2019</h2>
 			<h3 class="author">kreeperHLC updated:</h3>
 			<ul class="changes bgimages16">
-				<li class="bugfix">Исправлен баг с порталами.</li>
-			</ul>
-
-			<h2 class="date">18 November 2019</h2>
-			<h3 class="author">Terran updated:</h3>
-			<ul class="changes bgimages16">
-				<li class="tweak">Добавлен кастомный шлем, шапка и противогаз.</li>
+				<li class="bugfix">Фикс порталов.</li>
 			</ul>
 
 			<h2 class="date">17 November 2019</h2>
@@ -117,8 +121,8 @@
 			</ul>
 			<h3 class="author">KreeperHLC updated:</h3>
 			<ul class="changes bgimages16">
-				<li class="bugfix">Пофикшены ручные телепортеры, возвращён старый спрайт.</li>
-				<li class="bugfix">Исправлен обжектив на кражу ИИ.</li>
+				<li class="bugfix">Фикс ручных телепортеров, возвращён старый спрайт.</li>
+				<li class="bugfix">Фикс обжектива на кражу ИИ.</li>
 			</ul>
 
 			<h2 class="date">15 November 2019</h2>
