--- a/html/changelog.html
+++ b/html/changelog.html
@@ -38,6 +38,75 @@
 
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">30 November 2019</h2>
+			<h3 class="author">Ifromspace updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Фикс удаления ордеров.</li>
+			</ul>
+
+			<h2 class="date">29 November 2019</h2>
+			<h3 class="author">Ifromspace updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Фикс вербов малфа.</li>
+				<li class="tweal">РИГи теперь можно зарядить в зарядных станциях киборгов.</li>
+			</ul>
+			<h3 class="author">TatarTheBuilder updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">[Eclipse]: Дополнительно расширены некотороые прошлые однотайловые двери.</li>
+			</ul>
+
+			<h2 class="date">28 November 2019</h2>
+			<h3 class="author">Ifromspace updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Переработана цена многих вещей в аплинке. В ассортимент добавлены такие вещи как улучшенный стазисный мешок, балаклава, изолента и прочее.</li>
+			</ul>
+			<h3 class="author">TatarTheBuilder updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">[Eclipse]: Полностью переработана структура дормов.</li>
+				<li class="maptweak">[Eclipse]: Исправлены дизайнерские решения в виде однотайловых проходов во многих местах станции.</li>
+				<li class="maptweak">[Eclipse]: Исправлено подключение двух соединённых между собой АПЦ.</li>
+				<li class="maptweak">[Eclipse]: Добавлено несколько криоподов в медбей.</li>
+			</ul>
+			<h3 class="author">kreeperHLC updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Фикс нескольких рантаймов с дефибрилляторами, грабом и состыковкой шаттлов.</li>
+			</ul>
+
+			<h2 class="date">26 November 2019</h2>
+			<h3 class="author">Ifromspace updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Добавлен рецепт нового седативного реагента, как и ручка в трейторском аплинке с ним.</li>
+			</ul>
+			<h3 class="author">TatarTheBuilder updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">[Exodus]: Бриг полностью переработан.</li>
+				<li class="tweak">Шанс на ивент взлома дверей брига снижен в 10 раз.</li>
+			</ul>
+
+			<h2 class="date">25 November 2019</h2>
+			<h3 class="author">Ifromspace updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Иммунокорректору добавлен негативный эффект при употреблении с другими антивирусными препаратами.</li>
+			</ul>
+			<h3 class="author">TatarTheBuilder updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Фикс боеприпасов для дробовика в ящиках.</li>
+			</ul>
+
+			<h2 class="date">24 November 2019</h2>
+			<h3 class="author">Ifromspace updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Фикс котоушек.</li>
+				<li class="tweak">Маг потерял возможность стрелять из огнестрельного оружия.</li>
+			</ul>
+			<h3 class="author">Igorsaux updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Фикс оповещения о блобе.</li>
+				<li class="bugfix">Фикс спрайта джампсьюта на телосложениях slim и slim_alt.</li>
+				<li class="tweak">Добавлен новый спрайт для коробок с патронами дробовика.</li>
+				<li class="tweak">Блобу добавлен промежуток на использование способностей.</li>
+			</ul>
+
 			<h2 class="date">23 November 2019</h2>
 			<h3 class="author">Igorsaux updated:</h3>
 			<ul class="changes bgimages16">
