--- a/html/changelog.html
+++ b/html/changelog.html
@@ -48,21 +48,26 @@
 			<h3 class="author">Ifromspace updated:</h3>
 			<ul class="changes bgimages16">
 				<li class="bugfix">Фикс вербов малфа.</li>
-				<li class="tweal">РИГи теперь можно зарядить в зарядных станциях киборгов.</li>
+				<li class="tweak">РИГи теперь можно зарядить в зарядных станциях киборгов.</li>
 			</ul>
 			<h3 class="author">TatarTheBuilder updated:</h3>
 			<ul class="changes bgimages16">
-				<li class="maptweak">[Eclipse]: Дополнительно расширены некотороые прошлые однотайловые двери.</li>
+				<li class="maptweak">[Eclipse]: Дополнительно расширены некоторые проходы и двери.</li>
 			</ul>
 
 			<h2 class="date">28 November 2019</h2>
 			<h3 class="author">Ifromspace updated:</h3>
 			<ul class="changes bgimages16">
-				<li class="tweak">Переработана цена многих вещей в аплинке. В ассортимент добавлены такие вещи как улучшенный стазисный мешок, балаклава, изолента и прочее.</li>
+				<li class="tweak">Переработана цена многих вещей в аплинке.</li>
+				<li class="tweak">Из ассортимента трейторов были убраны самые опасные образцы оружия, теперь они доступны эксклюзивно для наёмников.</li>
+				<li class="tweak">В аплинк добавлен smuggler bag.</li>
+				<li class="tweak">В аплинк добавлен contortionist's jumpsuit.</li>
+				<li class="tweak">В аплинк добавлен explosive handcuffs.</li>
+				<li class="tweak">В аплинк добавлен modified stasis bag.</li>
 			</ul>
 			<h3 class="author">TatarTheBuilder updated:</h3>
 			<ul class="changes bgimages16">
-				<li class="maptweak">[Eclipse]: Полностью переработана структура дормов.</li>
+				<li class="maptweak">[Eclipse]: Полностью переработана структура дормов. Теперь они занимают больше места и стали более атмосферными.</li>
 				<li class="maptweak">[Eclipse]: Исправлены дизайнерские решения в виде однотайловых проходов во многих местах станции.</li>
 				<li class="maptweak">[Eclipse]: Исправлено подключение двух соединённых между собой АПЦ.</li>
 				<li class="maptweak">[Eclipse]: Добавлено несколько криоподов в медбей.</li>
