more map changelogs

--- a/html/changelog.html
+++ b/html/changelog.html
@@ -41,7 +41,7 @@
 			<h2 class="date">30 November 2019</h2>
 			<h3 class="author">Ifromspace updated:</h3>
 			<ul class="changes bgimages16">
-				<li class="bugfix">Фикс удаления ордеров.</li>
+				<li class="bugfix">Фикс процесса удаления ордеров.</li>
 			</ul>
 
 			<h2 class="date">29 November 2019</h2>
@@ -53,6 +53,8 @@
 			<h3 class="author">TatarTheBuilder updated:</h3>
 			<ul class="changes bgimages16">
 				<li class="maptweak">[Eclipse]: Дополнительно расширены некоторые проходы и двери.</li>
+				<li class="maptweak">[Eclipse]: Соединены две инжерных комнаты с консолями.</li>
+				<li class="maptweak">[Eclipse]: Убрана куча лишних каталок из медбея.</li>
 			</ul>
 
 			<h2 class="date">28 November 2019</h2>
@@ -68,6 +70,9 @@
 			<h3 class="author">TatarTheBuilder updated:</h3>
 			<ul class="changes bgimages16">
 				<li class="maptweak">[Eclipse]: Полностью переработана структура дормов. Теперь они занимают больше места и стали более атмосферными.</li>
+				<li class="maptweak">[Eclipse]: В робототехнике исправлен мусоропровод.</li>
+				<li class="maptweak">[Eclipse]: В с западной стороны токсинов добавлено окно.</li>
+				<li class="maptweak">[Eclipse]: Заделано пустое пространство вокруг сингулярности.</li>
 				<li class="maptweak">[Eclipse]: Исправлены дизайнерские решения в виде однотайловых проходов во многих местах станции.</li>
 				<li class="maptweak">[Eclipse]: Исправлено подключение двух соединённых между собой АПЦ.</li>
 				<li class="maptweak">[Eclipse]: Добавлено несколько криоподов в медбей.</li>
