additional change-logs

--- a/html/changelog.html
+++ b/html/changelog.html
@@ -38,10 +38,42 @@
 
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">04 December 2019</h2>
+			<h3 class="author">Ifromspace updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Добавлены две новые причёски за авторством Primud_suka.</li>
+			</ul>
+			<h3 class="author">KreeperHLC updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Портированы дионы. Теперь при их соединении воедино управляющий гештальтом определяется голосованием.</li>
+			</ul>
+
+			<h2 class="date">03 December 2019</h2>
+			<h3 class="author">Ifromspace updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Фикс стака спеллов.</li>
+			</ul>
+			<h3 class="author">KreeperHLC updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Фикс некоторых рантаймов.</li>
+			</ul>
+
+			<h2 class="date">02 December 2019</h2>
+			<h3 class="author">Ifromspace updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Минорный бикс бипски.</li>
+			</ul>
+
+			<h2 class="date">01 December 2019</h2>
+			<h3 class="author">Ifromspace updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Фикс спрайта джампсьюта на телосложении slim_alt.</li>
+			</ul>
+
 			<h2 class="date">30 November 2019</h2>
 			<h3 class="author">Ifromspace updated:</h3>
 			<ul class="changes bgimages16">
-				<li class="bugfix">Фикс процесса удаления ордеров.</li>
+				<li class="bugfix">Фикс удаления ордеров в менеджере.</li>
 			</ul>
 
 			<h2 class="date">29 November 2019</h2>
