--- a/html/changelog.html
+++ b/html/changelog.html
@@ -45,7 +45,9 @@
 			</ul>
 			<h3 class="author">KreeperHLC updated:</h3>
 			<ul class="changes bgimages16">
-				<li class="tweak">Портированы дионы. Теперь при их соединении воедино управляющий гештальтом определяется голосованием.</li>
+				<li class="tweak">Портированы новые дионы. Добавлена новая система управления гештальтом, его передвижением и атаками.</li>
+				<li class="tweak">Трубы под давлением при откручивании вылетают с определённой скоростью.</li>
+				<li class="bugfix">Фикс некоторых рантаймов.</li>
 			</ul>
 
 			<h2 class="date">03 December 2019</h2>
@@ -61,19 +63,19 @@
 			<h2 class="date">02 December 2019</h2>
 			<h3 class="author">Ifromspace updated:</h3>
 			<ul class="changes bgimages16">
-				<li class="bugfix">Минорный бикс бипски.</li>
+				<li class="bugfix">Минорный фикс бипски.</li>
 			</ul>
 
 			<h2 class="date">01 December 2019</h2>
 			<h3 class="author">Ifromspace updated:</h3>
 			<ul class="changes bgimages16">
-				<li class="bugfix">Фикс спрайта джампсьюта на телосложении slim_alt.</li>
+				<li class="bugfix">Фикс спрайта джампсьюта на телосложении slimalt.</li>
 			</ul>
 
 			<h2 class="date">30 November 2019</h2>
 			<h3 class="author">Ifromspace updated:</h3>
 			<ul class="changes bgimages16">
-				<li class="bugfix">Фикс удаления ордеров в менеджере.</li>
+				<li class="bugfix">Исправлено удаление ордеров из Warrant Assistant.</li>
 			</ul>
 
 			<h2 class="date">29 November 2019</h2>
