fix for fix for fix for...

--- a/html/changelog.html
+++ b/html/changelog.html
@@ -45,7 +45,7 @@
 			</ul>
 			<h3 class="author">KreeperHLC updated:</h3>
 			<ul class="changes bgimages16">
-				<li class="tweak">Портированы новые дионы. Добавлена новая система управления гештальтом, его передвижением и атаками.</li>
+				<li class="tweak">Портированы дионы с новыми механиками их эволюции.</li>
 				<li class="tweak">Трубы под давлением при откручивании вылетают с определённой скоростью.</li>
 				<li class="bugfix">Фикс некоторых рантаймов.</li>
 			</ul>
