--- a/html/changelog.html
+++ b/html/changelog.html
@@ -38,6 +38,30 @@
 
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">07 December 2019</h2>
+			<h3 class="author">TapKo4eB updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Исправлено сообщение при вправке костей bone setter'ом.</li>
+			</ul>
+
+			<h2 class="date">06 December 2019</h2>
+			<h3 class="author">Ifromspace updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Теперь рюкзаки можно подписывать hand labeler'ом на хелпе.</li>
+				<li class="tweak">Культистам добавлена новая руна и талисман гипноза.</li>
+				<li class="tweak">Необходимое количество культистов для каста EMP руны увеличено до двух, для confuse до трёх.</li>
+			</ul>
+			<h3 class="author">TatarTheBuilder updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">[Exodus]: Исправлена вентиляция в бриге.</li>
+				<li class="maptweak">[Exodus]: В ящики офицерам добавлен ещё один бронежилет.</li>
+				<li class="maptweak">[Exodus]: Добавлено больше голопадов для ИИ в бриг.</li>
+				<li class="maptweak">[Exodus]: Исправлены камеры в бриге.</li>
+				<li class="maptweak">[Exodus]: Исправлен туалет в дормах.</li>
+				<li class="maptweak">[Exodus]: Исправлены вентиляционные трубы на аванпосту.</li>
+				<li class="maptweak">[Exodus]: Исправлена генерация камней вокруг аванпоста и дереликта-шаттла на астероиде.</li>
+			</ul>
+
 			<h2 class="date">04 December 2019</h2>
 			<h3 class="author">Ifromspace updated:</h3>
 			<ul class="changes bgimages16">
