--- a/html/changelog.html
+++ b/html/changelog.html
@@ -47,7 +47,7 @@
 			<h2 class="date">06 December 2019</h2>
 			<h3 class="author">Ifromspace updated:</h3>
 			<ul class="changes bgimages16">
-				<li class="tweak">Теперь рюкзаки можно подписывать hand labeler'ом не на хелпе.</li>
+				<li class="tweak">Теперь рюкзаки можно подписывать hand labeler'ом.</li>
 				<li class="tweak">Культистам добавлена новая руна и талисман гипноза.</li>
 				<li class="tweak">Необходимое количество культистов для каста EMP руны увеличено до двух, для confuse до трёх.</li>
 			</ul>
