10th commit, arbuzi and pricheson

--- a/html/changelog.html
+++ b/html/changelog.html
@@ -38,7 +38,12 @@
 
 		-->
 		<div class="commit sansserif">
+		<div class="commit sansserif">
 			<h2 class="date">07 December 2019</h2>
+			<h3 class="author">Ifromspace updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Исправлены все кухонные рецепты включающие в себя бананы и арбузы.</li>
+			</ul>
 			<h3 class="author">TapKo4eB updated:</h3>
 			<ul class="changes bgimages16">
 				<li class="bugfix">Исправлено сообщение при вправке костей bone setter'ом.</li>
@@ -63,10 +68,6 @@
 			</ul>
 
 			<h2 class="date">04 December 2019</h2>
-			<h3 class="author">Ifromspace updated:</h3>
-			<ul class="changes bgimages16">
-				<li class="tweak">Добавлены две новые причёски за авторством Primud_suka.</li>
-			</ul>
 			<h3 class="author">KreeperHLC updated:</h3>
 			<ul class="changes bgimages16">
 				<li class="tweak">Портированы дионы с новыми механиками их эволюции.</li>
