--- a/html/changelog.html
+++ b/html/changelog.html
@@ -38,6 +38,144 @@
 
 		-->
 		<div class="commit sansserif">
+		<div class="commit sansserif">
+			<h2 class="date">07 December 2019</h2>
+			<h3 class="author">Ifromspace updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Исправлены все кухонные рецепты включающие в себя бананы и арбузы.</li>
+			</ul>
+			<h3 class="author">TapKo4eB updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Исправлено сообщение при вправке костей bone setter'ом.</li>
+			</ul>
+
+			<h2 class="date">06 December 2019</h2>
+			<h3 class="author">Ifromspace updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Теперь рюкзаки можно подписывать hand labeler'ом.</li>
+				<li class="tweak">Культистам добавлена новая руна и талисман гипноза.</li>
+				<li class="tweak">Необходимое количество культистов для каста EMP руны увеличено до двух, для confuse до трёх.</li>
+			</ul>
+			<h3 class="author">TatarTheBuilder updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">[Exodus]: Исправлена вентиляция в бриге.</li>
+				<li class="maptweak">[Exodus]: В ящики офицерам добавлен ещё один бронежилет.</li>
+				<li class="maptweak">[Exodus]: Добавлено больше голопадов для ИИ в бриг.</li>
+				<li class="maptweak">[Exodus]: Исправлены камеры в бриге.</li>
+				<li class="maptweak">[Exodus]: Исправлен туалет в дормах.</li>
+				<li class="maptweak">[Exodus]: Исправлены вентиляционные трубы на аванпосту.</li>
+				<li class="maptweak">[Exodus]: Исправлена генерация камней вокруг аванпоста и дереликта-шаттла на астероиде.</li>
+			</ul>
+
+			<h2 class="date">04 December 2019</h2>
+			<h3 class="author">KreeperHLC updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Портированы дионы с новыми механиками их эволюции.</li>
+				<li class="tweak">Трубы под давлением при откручивании вылетают с определённой скоростью.</li>
+				<li class="bugfix">Фикс некоторых рантаймов.</li>
+			</ul>
+
+			<h2 class="date">03 December 2019</h2>
+			<h3 class="author">Ifromspace updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Фикс стака спеллов.</li>
+			</ul>
+			<h3 class="author">KreeperHLC updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Фикс некоторых рантаймов.</li>
+			</ul>
+
+			<h2 class="date">02 December 2019</h2>
+			<h3 class="author">Ifromspace updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Минорный фикс бипски.</li>
+			</ul>
+
+			<h2 class="date">01 December 2019</h2>
+			<h3 class="author">Ifromspace updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Фикс спрайта джампсьюта на телосложении slimalt.</li>
+			</ul>
+
+			<h2 class="date">30 November 2019</h2>
+			<h3 class="author">Ifromspace updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Исправлено удаление ордеров из Warrant Assistant.</li>
+			</ul>
+
+			<h2 class="date">29 November 2019</h2>
+			<h3 class="author">Ifromspace updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Фикс вербов малфа.</li>
+				<li class="tweak">РИГи теперь можно зарядить в зарядных станциях киборгов.</li>
+			</ul>
+			<h3 class="author">TatarTheBuilder updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">[Eclipse]: Дополнительно расширены некоторые проходы и двери.</li>
+				<li class="maptweak">[Eclipse]: Соединены две инжерных комнаты с консолями.</li>
+				<li class="maptweak">[Eclipse]: Убрана куча лишних каталок из медбея.</li>
+			</ul>
+
+			<h2 class="date">28 November 2019</h2>
+			<h3 class="author">Ifromspace updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Переработана цена многих вещей в аплинке.</li>
+				<li class="tweak">Из ассортимента трейторов были убраны самые опасные образцы оружия, теперь они доступны эксклюзивно для наёмников.</li>
+				<li class="tweak">В аплинк добавлен smuggler bag.</li>
+				<li class="tweak">В аплинк добавлен contortionist's jumpsuit.</li>
+				<li class="tweak">В аплинк добавлен explosive handcuffs.</li>
+				<li class="tweak">В аплинк добавлен modified stasis bag.</li>
+			</ul>
+			<h3 class="author">TatarTheBuilder updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">[Eclipse]: Полностью переработана структура дормов. Теперь они занимают больше места и стали более атмосферными.</li>
+				<li class="maptweak">[Eclipse]: В робототехнике исправлен мусоропровод.</li>
+				<li class="maptweak">[Eclipse]: В с западной стороны токсинов добавлено окно.</li>
+				<li class="maptweak">[Eclipse]: Заделано пустое пространство вокруг сингулярности.</li>
+				<li class="maptweak">[Eclipse]: Исправлены дизайнерские решения в виде однотайловых проходов во многих местах станции.</li>
+				<li class="maptweak">[Eclipse]: Исправлено подключение двух соединённых между собой АПЦ.</li>
+				<li class="maptweak">[Eclipse]: Добавлено несколько криоподов в медбей.</li>
+			</ul>
+			<h3 class="author">kreeperHLC updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Фикс нескольких рантаймов с дефибрилляторами, грабом и состыковкой шаттлов.</li>
+			</ul>
+
+			<h2 class="date">26 November 2019</h2>
+			<h3 class="author">Ifromspace updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Добавлен рецепт нового седативного реагента, как и ручка в трейторском аплинке с ним.</li>
+			</ul>
+			<h3 class="author">TatarTheBuilder updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">[Exodus]: Бриг полностью переработан.</li>
+				<li class="tweak">Шанс на ивент взлома дверей брига снижен в 10 раз.</li>
+			</ul>
+
+			<h2 class="date">25 November 2019</h2>
+			<h3 class="author">Ifromspace updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Иммунокорректору добавлен негативный эффект при употреблении с другими антивирусными препаратами.</li>
+			</ul>
+			<h3 class="author">TatarTheBuilder updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Фикс боеприпасов для дробовика в ящиках.</li>
+			</ul>
+
+			<h2 class="date">24 November 2019</h2>
+			<h3 class="author">Ifromspace updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Фикс котоушек.</li>
+				<li class="tweak">Маг потерял возможность стрелять из огнестрельного оружия.</li>
+			</ul>
+			<h3 class="author">Igorsaux updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Фикс оповещения о блобе.</li>
+				<li class="bugfix">Фикс спрайта джампсьюта на телосложениях slim и slim_alt.</li>
+				<li class="tweak">Добавлен новый спрайт для коробок с патронами дробовика.</li>
+				<li class="tweak">Блобу добавлен промежуток на использование способностей.</li>
+			</ul>
+
 			<h2 class="date">23 November 2019</h2>
 			<h3 class="author">Igorsaux updated:</h3>
 			<ul class="changes bgimages16">
