--- a/html/changelog.html
+++ b/html/changelog.html
@@ -39,6 +39,22 @@
 		-->
 		<div class="commit sansserif">
 		<div class="commit sansserif">
+			<h2 class="date">10 December 2019</h2>
+			<h3 class="author">Ifromspace updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Теперь в настройках персонажа можно выбрать искусственный желудок.</li>
+				<li class="bugfix">Исправлены падения сервера из-за чейнджлингов.</li>
+				<li class="bugfix">Исправлены ошибки при сохранении персонажа с искусственными органами.</li>
+				<li class="bugfix">Исправлено поведение криосумки при щелчке ею по себе.</li>
+			</ul>
+
+			<h3 class="author">TatarTheBuilder updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="imageadd">Обновил спрайты гранат.</li>
+				<li class="imageadd">Минорные изменения спрайтов патронов дробовика и патронов в магазинах .45 калибра.</li>
+				<li class="bugfix">Исправлен спрайт Exploration voidsuit (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/999">issue #999</a>)</li>
+			</ul>
+
 			<h2 class="date">07 December 2019</h2>
 			<h3 class="author">Ifromspace updated:</h3>
 			<ul class="changes bgimages16">
