--- a/html/changelog.html
+++ b/html/changelog.html
@@ -29,16 +29,32 @@
 		</td>
 	</tr>
 </table>
-
-		<!--
-
-		TO ADD AN ENTRY, ADD AND MAINTAIN YOUR OWN changelog/USERNAME.yml FILE.
-
-		*** DO NOT MODIFY THIS FILE OR YOU WILL CAUSE MERGE CONFLICTS. ***
-
-		-->
 		<div class="commit sansserif">
-		<div class="commit sansserif">
+			<h2 class="date">10 December 2019</h2>
+			<h3 class="author">Epicus updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавил автоматические радио-оповещения для офицеров при изменении статуса розыска (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/994">issue #994</a>).</li>
+				<li class="bugfix">Починил раздваивание батарейки при вставке в заряжающее устройство (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/1015">issue #1015</a>).</li>
+				<li class="bugfix">Починил перезарядку многоразовых модулей медицинских киборгов (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/615">issue #615</a>).</li>
+				<li class="bugfix">Починил дизарм армблейда генокрада (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/1039">issue #1039</a>).</li>
+			</ul>
+
+			<h3 class="author">Ifromspace updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Сделал обезьян более раздражающими.</li>
+			</ul>
+
+			<h3 class="author">TatarTheBuilder updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавил новый вид противогаза.</li>
+				<li class="tweak">Убрал темно-зеленый оверлей при надевании противогаза.</li>
+				<li class="maptweak">Добавил в библиотеку шреддер (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/678">issue #678</a>).</li>
+				<li class="maptweak">Добавил лейблер на кухню (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/459">issue #459</a>).</li>
+				<li class="imageadd">Обновил спрайты костюмов биологической защиты.</li>
+				<li class="bugfix">Починил мусорку в бриге.</li>
+			</ul>
+
+
 			<h2 class="date">10 December 2019</h2>
 			<h3 class="author">Ifromspace updated:</h3>
 			<ul class="changes bgimages16">
